# polkit-kde-kcmodules-1

./: .kde-ci.yml  CMakeLists.txt  PKLAEntry.cpp  PKLAEntry.h  settings-system-policies.desktop
common/: CMakeLists.txt  PKLAEntry.cpp  PKLAEntry.h  identitywidget.cpp  identitywidget.h  identitywidget.ui
helper/: CMakeLists.txt  Messages.sh  main.cpp  org.kde.polkitkde1.helper.conf  org.kde.polkitkde1.helper.service.in  org.kde.polkitkde1.helper.xml  polkitkde1.actions  polkitkde1helper.cpp  polkitkde1helper.h
helper/policy-gen/: kauth-policy-gen-polkit1.cpp  policy-gen.cpp  policy-gen.h
polkitactions/: ActionWidget.cpp  ActionWidget.h  AuthorizationsFilterModel.cpp  AuthorizationsFilterModel.h  CMakeLists.txt  PoliciesModel.cpp  PoliciesModel.h  PolicyItem.cpp  PolicyItem.h  PolkitActionsKCM.cpp  PolkitActionsKCM.h  actionwidget.ui  explicitauthorizationdialog.cpp  explicitauthorizationdialog.h  explicitwidget.ui  kcm_polkitactions.desktop  mainview.ui  pkitemdelegate.cpp  pkitemdelegate.h
polkitconfig/: CMakeLists.txt  Messages.sh  identitywidget.cpp  identitywidget.h  identitywidget.ui  kcm_polkitconfig.desktop  kcmpolkitconfig.cpp  kcmpolkitconfig.h  polkitconfig.ui
